Currencies rate from API database